feat(front): MP-2799 display votes and scores

--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -372,6 +372,7 @@
     "agree": "Agree",
     "disagree": "Disagree",
     "neutral": "I am neutral",
+    "label": "{{count}} vote",
     "label_plural": "{{count}} votes",
     "with_percent": "{{votedKey}} : {{votedPercent}}%"
   },
