--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -318,7 +318,7 @@
       "tooltip_title": "Under moderation",
       "tooltip_description": "Your solution will be processed by our teams within 48 hours, in the meantime you can already find it in your profile.",
       "grats": "Congratulations {{name}}, ",
-      "proposal_sent": "your proposal has been submitted ",
+      "proposal_sent": "your solution has been submitted ",
       "activate": "Confirm your email address in one click ",
       "link": "to ensure the authenticity of your account. Click on the activation link that you received at : {{mail}}",
       "question": "Do you have a question? Please contact us at : "
@@ -326,7 +326,7 @@
     "form": {
       "bait": "We should ",
       "title": "Write a solution using 140 characters max, then click on the \"Submit\" button",
-      "field": "Proposal field",
+      "field": "Solution field",
       "counter": "Your solution contains {{current}} characters over {{total}}",
       "panel_trigger": "I write a solution",
       "button_cancel": "Cancel",
@@ -613,11 +613,11 @@
       "password": "Enter my password"
     },
     "organisation": {
-      "proposal_agree": "agrees with the proposal",
-      "proposal_disagree": "disagrees with the proposal",
+      "proposal_agree": "agrees with the solution",
+      "proposal_disagree": "disagrees with the solution",
       "and": " and ",
-      "hasVoted": " voted on this proposal.",
-      "hasVoted_plural": " voted on this proposal.",
+      "hasVoted": " voted on this solution.",
+      "hasVoted_plural": " voted on this solution.",
       "sharing_title": "Partagez ce profil"
     }
   },
@@ -806,7 +806,7 @@
       "soon": "Coming up",
       "submit": {
         "title": "Write a solution",
-        "description": "Share your ideas with as many people as possible. Each proposal will be modarated before being put to the vote of the citizens.",
+        "description": "Share your ideas with as many people as possible. Each solution will be modarated before being put to the vote of the citizens.",
         "button": "I write a solution"
       },
       "interact": {
@@ -1161,8 +1161,8 @@
       "participate": "Participate",
       "contributors": "Participant",
       "contributors_plural": "Participants",
-      "proposals": "Solution",
-      "proposals_plural": "Solutions",
+      "proposals": "solution",
+      "proposals_plural": "solutions",
       "empty": "Unfortunately, we have no consultation open in this country."
     },
     "results": {
