--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1019,10 +1019,10 @@
       "participate": "Teilnehmen",
       "contributors": "Teilnehmer:in",
       "contributors_plural": "Teilnehmer:innen",
-      "proposals": "Vorschlag",
-      "proposals_plural": "Vorschläge",
-      "votes": "Stimme",
-      "votes_plural": "Stimmen",
+      "proposals": "vorschlag",
+      "proposals_plural": "vorschläge",
+      "votes": "stimme",
+      "votes_plural": "stimmen",
       "empty": "Es tut uns leid, in deinem Land ist derzeit keine Konsultation verfügbar."
     },
     "results": {
