--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -117,7 +117,9 @@
       "mail_confirmation": "um die Gültigkeit deines Kontos zu gewährleisten. Klicke auf den Aktivierungslink, der dir an diese Adresse geschickt wurde : {{mail}}",
       "onboarding": "Gib deine Meinung zu gesellschaftlichen Themen ab, die dir am Herzen liegen, indem du an unseren Bürgerkonsultationen teilnimmst.",
       "cta": "Take part in consultations",
-      "cta_access": "Ich rufe die Konsultation auf"
+      "cta_access": "Ich rufe die Konsultation auf",
+      "optin_cgu_title": "Finalisez votre inscription",
+      "optin_cgu_subtitle": "en quelques clics"
     },
     "form": {
       "hide_password": "Passwort ausblenden",
