--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -117,7 +117,10 @@
       "mail_confirmation": " pour garantir l’authenticité de votre compte. Cliquez sur le lien d’activation qui vous a été envoyé à : {{mail}}",
       "onboarding": "Donnez votre avis sur des sujets de société qui vous tiennent à coeur en participant à nos consultations citoyennes.",
       "cta": "Participer aux consultations",
-      "cta_access": "J'accède à la consultation"
+      "cta_access": "J'accède à la consultation",
+      "optin_cgu_title": "Finalisez votre inscription",
+      "optin_cgu_subtitle": "en quelques clics"
+
     },
     "form": {
       "hide_password": "Masquer le mot de passe",
