feat(front): 2876 featured news logic

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1099,6 +1099,7 @@
       "title": "Make.org setzt sich für wichtige gesellschaftliche Themen ein"
     },
     "posts": {
+      "title": "Unsere Neuigkeiten",
       "link_text": "Artikel lesen",
       "see_all": "Alle Neuigkeiten ansehen"
     },
