--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -1067,6 +1067,7 @@
       "title": "Make.org passe à l’action sur les grands sujets de société"
     },
     "posts": {
+      "title": "Notre actualité",
       "link_text": "Lire l'article",
       "see_all": "Voir toute l'actualité"
     },
