--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -1058,6 +1058,7 @@
       "title": "Make.org setzt sich für wichtige gesellschaftliche Themen ein"
     },
     "posts": {
+      "title": "Unsere Neuigkeiten",
       "link_text": "Artikel lesen",
       "see_all": "Alle Neuigkeiten ansehen"
     },
