--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -978,6 +978,7 @@
       "title": "Make.org in action for society"
     },
     "posts": {
+      "title": "Our news",
       "link_text": "Read the article",
       "see_all": "See all news"
     },
