feat(ui): update special sequences with new style

--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1270,8 +1270,8 @@
     "US": "USA"
   },
   "sequence_zone": {
-    "popular_title": "Most popular solutions",
-    "controversial_title": "Most controversial solutions"
+    "popular_title": "Popular solutions",
+    "controversial_title": "Controversial solutions"
   },
   "special_final_card": {
     "title": "Thank you for voting !",
