feat(front): 2869 logic country language switch

--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -1296,5 +1296,10 @@
     "SI": "Slovénie",
     "SK": "Slovaquie",
     "US": "USA"
+  },
+  "languages": {
+    "fr": "Français",
+    "en": "English",
+    "de": "Deutsch"
   }
 }
