--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -1269,6 +1269,11 @@
     "SK": "Slovakia",
     "US": "USA"
   },
+  "languages": {
+    "fr": "Français",
+    "en": "English",
+    "de": "Deutsch"
+  },
   "sequence_zone": {
     "popular_title": "Popular solutions",
     "controversial_title": "Controversial solutions"
