--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -372,7 +372,7 @@
     "counter": "Element {{current}} von {{total}}"
   },
   "sequence_zone": {
-    "popular_title": "Beliebtesten Vorschläge",
+    "popular_title": "Beliebte Vorschläge",
     "controversial_title": "Umstrittene Vorschläge"
   },
   "special_final_card": {
