--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -118,8 +118,8 @@
       "onboarding": "Gib deine Meinung zu gesellschaftlichen Themen ab, die dir am Herzen liegen, indem du an unseren Bürgerkonsultationen teilnimmst.",
       "cta": "Take part in consultations",
       "cta_access": "Ich rufe die Konsultation auf",
-      "optin_cgu_title": "Finalisez votre inscription",
-      "optin_cgu_subtitle": "en quelques clics"
+      "optin_cgu_title": "Schließe deine Anmeldung",
+      "optin_cgu_subtitle": "mit wenigen Klicks ab"
     },
     "form": {
       "hide_password": "Passwort ausblenden",
@@ -1300,5 +1300,11 @@
     "submitted_thanks": "Danke für deine Antwort.",
     "submitted_disclaimer": "Sie wird anonym verwendet, um die Ergebnisse der Konsultation zu analysieren.",
     "select": "Auswählen"
+  },
+  "language_switch": {
+    "country_title": "Deine Land",
+    "country_subtitle": "Die Auswahl deines Landes bestimmt die für dich verfügbaren Konsultationen.",
+    "language_title": "Deine Sprache",
+    "confirm": "Bestätigen"
   }
 }
