feat(global): update german wording

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -1022,9 +1022,9 @@
       "contributors": "Teilnehmer:in",
       "contributors_plural": "Teilnehmer:innen",
       "proposals": "vorschlag",
-      "proposals_plural": "vorschläge",
+      "proposals_plural": "Vorschläge",
       "votes": "stimme",
-      "votes_plural": "stimmen",
+      "votes_plural": "Stimmen",
       "empty": "Es tut uns leid, in deinem Land ist derzeit keine Konsultation verfügbar."
     },
     "results": {
