--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -983,7 +983,7 @@
       "contributors": "Teilnehmer:in",
       "contributors_plural": "Teilnehmer:innen",
       "proposals": "vorschlag",
-      "proposals_plural": "vorschläge",
+      "proposals_plural": "Vorschläge",
       "empty": "Es tut uns leid, in deinem Land ist derzeit keine Konsultation verfügbar."
     },
     "results": {
