--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -652,7 +652,8 @@
         "profession": "Profession : ",
         "biography": "Biographie : ",
         "website": "Site Internet : ",
-        "political_party": "Parti politique : "
+        "political_party": "Parti politique : ",
+        "select": "Sélectionner"
       }
     },
     "informations_update": {
@@ -671,8 +672,9 @@
         "trigger": "Avez-vous oublié votre mot de passe ?"
       }
     },
-    "newsletter_update": {
-      "title": "Gérer mes préférences",
+    "communication_preferences": {
+      "title": "Gérer mes préférences de communication",
+      "description": "Sélectionnez votre pays et la langue dans laquelle vous souhaitez recevoir des emails de Make.org.",
       "optin_label": "J'accepte de recevoir des emails de Make.org pour me tenir au courant de l'actualité des consultations en cours et à venir."
     },
     "delete_account": {
