feat(front): 2990 add restart sequence button

--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -343,6 +343,7 @@
     "title": "Danke, dass du dir die Zeit genommen hast, dich zu den Vorschlägen zu äußern.",
     "description": "Stimme für weitere Vorschläge ab und hilf uns dabei, die wichtigsten Themen zu identifizieren.",
     "link_text": "Ich rufe die Konsultation auf",
+    "continue": "Weiter abstimmen",
     "register": {
       "description": "Wie kann ich die Ergebnisse verfolgen?",
       "button_intro": "Erstelle deinen",
